<resources>
    <string name="app_name" translatable="false">Olinda Turismo</string>
    <string name="local_name_hint">Nome</string>
    <string name="local_title">Locais</string>
    <string name="title_activity_maps">Maps</string>
    <string name="nome_lugar">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="endereco">Endereço</string>
    <string name="funcionamento">Funcionamento</string>
    <string name="site">Site</string>
    <string name="email" translatable="false">e-mail</string>
    <string name="go_maps">Ver mapa</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="confira_no_mapa">Confira no mapa</string>
    <string name="imgsobre" translatable="false">ImgSobre</string>
    <string name="imglogo" translatable="false">ImgLogo</string>
    <string name="imglocal" translatable="false">imglocal</string>
    <string name="txt_gastronomia">Gastronomia</string>
    <string name="txt_hotelaria">Hospedagem</string>
    <string name="txt_igrejas">Igrejas</string>
    <string name="txt_monumentos">Monumentos</string>
    <string name="txt_eventos">Eventos</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="menu_sobre">Sobre</string>
    <string name="nome_evento">Nome do evento</string>
    <string name="Local_do_evento">local do evento</string>
    <string name="atracoes_evento">Atracoes do evento</string>
    <string name="horario_evento">horario_evento</string>

    <string name="txt_carregando">Carregando</string>
    <string name="Data_do_evento">Data</string>
    <string name="valor_evento">valor_entrada</string>
    <string name="atualizar">Atualizar</string>
    <string name="ver_mapa">Ver mapa</string>
    <string name="home">Home</string>
    <string name="logo">Logomarca da secretaria de turismo de olinda</string>
    <string name="data_agremiacao">data agremiação</string>
</resources>
