<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GUI.activities.Inicio">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_white"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/atualizar"
        android:orderInCategory="100"
        android:title="@string/atualizar"
        app:showAsAction="withText" />

    <item
        android:id="@+id/mapa"
        android:orderInCategory="100"
        android:title="@string/ver_mapa"
        app:showAsAction="withText" />

    <item
        android:id="@+id/sobre"
        android:orderInCategory="100"
        android:title="@string/menu_sobre"
        app:showAsAction="withText" />


</menu>