<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/local_card_view"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#eee"
        app:cardCornerRadius="5dp"
        app:contentPadding="3dp"
        app:contentPaddingBottom="5dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/imagem_lugar_wrapper"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/imagem_evento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/semfoto" />
            </LinearLayout>

            <TextView
                android:id="@+id/nome_evento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/nome_evento"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/local_evento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/Local_do_evento"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/horario_evento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/horario_evento"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/atracoes_evento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/atracoes_evento"
                android:textSize="15dp" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>